# Hackathon-2

./: .gitignore  CLAUDE.md  cleanup_old_auth.py  deploy_to_hf.bat  deploy_to_palwasha_space.bat
Phase-1/: implementation_plan.md  tasks.md  todo_app_srd.md  todo_data.json
Phase-1/Todo-console-application/: main.py  pyproject.toml  reproduce_crash.py  requirements.txt  test_import.py  test_premium_app_init.py  verify_fix.py
Phase-1/specs/: phase1-design.md
Phase-1/src/: todo_app.py
Phase-1/tests/: test_persistence.py  test_task.py  test_taskmanager_crud.py
Phase-2/: CLAUDE.md  docker-compose.yml
Phase-2/.spec-kit/: config.yaml
Phase-2/backend/: .dockerignore  CLAUDE.md  Dockerfile  README.md  agent.py  fix_role_final.py  init_db.py  main.py  memory_store.py  pyproject.toml  requirements.txt  server.py  test_delete_todo_e2e.py
Phase-2/backend/api/: deps.py  tasks.py
Phase-2/backend/db/: session.py
Phase-2/backend/models/: session.py  task.py  user.py
Phase-2/backend/src/config/: logging_config.py
Phase-2/backend/src/models/: conversation.py  database.py  message.py  session.py
Phase-2/backend/src/services/: mcp_client.py
Phase-2/frontend/: CLAUDE.md  Dockerfile  chatkit.d.ts  package-lock.json  package.json  test-db-connection.js  tsconfig.json
Phase-3/: .gitignore  DEPLOYMENT.md  QUICKSTART.md  README.md  demo.py  docker-compose.yml
Phase-3/backend/: .gitignore  check_role.py  force_admin.py  pyproject.toml  requirements.txt  server.py  (+2 more)
Phase-4/: README.md
Phase-5/: .dockerignore  .gitignore
Phase-5/backend/: .dockerignore  Dockerfile  README.md  agent.py  check_user.py  main.py  pyproject.toml  test_chatkit.py  test_integration_mcp_todo.py  verify_chatkit_final.py
Phase-5/backend/dapr/components/: pubsub.yaml  secrets.yaml
Phase-5/backend/db/: alembic.ini  env.py  script.py.mako
Phase-5/backend/schemas/: user.py
Phase-5/backend/src/agents/: agent.py
Phase-5/backend/src/api/: middleware.py  server.py
Phase-5/backend/src/auth/: __init__.py  dependencies.py  security.py
Phase-5/backend/src/config/: __init__.py  settings.py
Phase-5/backend/src/dapr/: __init__.py  dapr_client.py  dapr_handlers.py
Phase-5/backend/src/events/: __init__.py  audit_events.py  event_publisher.py  reminder_events.py  task_events.py
Phase-5/backend/src/models/: __init__.py  audit.py  notification.py  task.py  todo.py  user.py
Phase-5/backend/src/monitoring/: metrics.py
Phase-5/backend/src/utils/: __init__.py  cache.py  exceptions.py  logging.py
(+318 files in other folders)
